@@ -1,10 +1,17 @@
 8.0.0
  - C++20 is now the oldest C++ version that libpqxx supports.
+ - Retired `binarystring` and its headers.  Use `blob` instead.
+ - Retired result row slicing.
+ - Retired `connection_base` type alias.  Use `connection`.
+ - Assume compiler supports concepts.
  - Assume compiler supports integral conversions in `charconv`.
  - Assume compiler supports spans, ranges, and `cmp_less` etc.
  - Retired `binarystring` and its headers.
  - Retired result row slicing.
  - Compiler must support integral conversions in `charconv`.
+ - Assume compiler supports `[[likely]]` & `[[unlikely]]`.
+ - Assume compiler supports `ssize()`.
+ - Assume compiler supports ISO-646 without needing `<ciso646>` header.
 7.10.2
  - CMake: Drop unneeded, broken `PostgreSQL_INCLUDE_DIRS` definition. (#981)
  - Handle spaces and single quotes in `connection::connection_string()` (#992)
